<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/instapost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleText"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:layout_marginBottom="8dp">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/post"
                android:id="@+id/postButton"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users"
                android:padding="8dp"
                android:id="@+id/listUsers"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashtags"
                android:id="@+id/listHashtags"
                android:padding="8dp"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:padding="8dp"
                android:id="@+id/refreshButton"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"/>

</LinearLayout>