<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PostActivity">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentStart="true"
                   android:layout_marginStart="10dp"
                   android:src="@drawable/ic_close"
                   android:layout_marginTop="20dp"
                   android:id="@+id/close"/>
        <Button android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/postIt"
                  android:textSize="16sp"
                  android:layout_marginTop="30dp"
                  android:layout_marginEnd="10dp"
                  android:layout_centerVertical="true"
                  android:layout_alignParentEnd="true"
                  android:text="@string/post"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="8dp">
        <ImageView android:layout_width="match_parent"
                   android:layout_height="200dp"
                   android:layout_gravity="center"
                   android:src="@mipmap/ic_launcher"
                   android:id="@+id/image_add"
                   android:scaleType="centerInside"/>
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/description"
                  android:maxLines="7"
                  android:id="@+id/description"
                  android:layout_marginTop="15dp"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_photo"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:id="@+id/choosePhotoButton"/>

    </LinearLayout>

</LinearLayout>